# rules_go_proto

./: .gitignore  BUILD.bazel  README.md  WORKSPACE
go_proto/: BUILD.bazel  index.tpl  redoc.tpl  rules.bzl
google/api/: BUILD.bazel
google/protobuf/: BUILD.bazel  descriptor.proto
