# Hack derived from https://github.com/bazelbuild/rules_go/issues/248
load("@com_github_tnarg_rules_gogo_proto//go_proto:rules.bzl", "gogo_proto_library")

filegroup(
    name = "protos",
    srcs = [
        "descriptor.proto",
    ],
    visibility = ["//visibility:public"],
)


gogo_proto_library(
    name = "go_default_library",
    importpath = "github.com/golang/protobuf/protoc-gen-go/descriptor",
    srcs = [
        "descriptor.proto",
    ],
    visibility = ["//visibility:public"],
)
